--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,6 @@
       <button type="submit">Search</button>
     </form>
 
-    
+    <script src="index.js" type="module"></script>
   </body>
 </html>
