--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
         placeholder="Search images..."
       />
       <button type="submit">Search</button>
+      <div class="gallery">
+        <!-- Картки зображень -->
+      </div>
     </form>
   </body>
 </html>
