--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.11.0/simple-lightbox.css"
+    /> -->
     <script type="module" src="./index.js"></script>
   </head>
   <body>
@@ -20,5 +24,6 @@
         <!-- Картки зображень -->
       </div>
     </form>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.11.0/simple-lightbox.min.js"></script> -->
   </body>
 </html>
