--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <!-- Картки зображень -->
       </div>
     </form>
-    <button type="button" class="load-more">Load more</button>
+    <button hidden type="button" class="load-more">Load more</button>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.11.0/simple-lightbox.min.js"></script> -->
   </body>
 </html>
